# design_patterns

./: CMakeLists.txt  Creational_Abstract.cpp  Creational_Prototype.cpp  Creational_Singleton.cpp  README.md  Structrual_Adaptor.cpp  Structrual_Decorator.cpp  capitals.txt
Basics/: Object_Creation.md  Returning_Objects_From_Functions.md
Behavioral/: CMakeLists.txt  Creature.cpp  broker_chain.cpp
Behavioral/Chain/: CMakeLists.txt  chain_of_resp.cpp
Behavioral/Command/: Basic_Command.cpp  CMakeLists.txt  Undo_Command.cpp
Creational/: CMakeLists.txt  Creational_Builder.cpp  Creational_Singleton.cpp  Prototype.cpp
Creational_Patterns/: Abstract_Factory.cpp  CMakeLists.txt  Factory.cpp
SOILD/: CMakeLists.txt  _soild_.md  dip.cpp  isp.cpp  lsp.cpp  ocp.cpp  srp.cpp
Structural/: CMakeLists.txt  Decorator.cpp  Structrual_Adaptor.cpp  Structural_Facade.cpp
Structural/Bridge/: Person.cpp  Person.h  main_renderer.cpp  pimpl.h  pimpl_main.cpp  renderer.cpp  renderer.h
Structural/Flyweight/: CMakeLists.txt  User.cpp
Structural/Proxy/: CMakeLists.txt  Structural_Proxy1.cpp  communication_proxy.cpp  property.cpp  property_proxy.cpp  virtual_proxy.cpp
Structural_Bridge/: CMakeLists.txt  Foo.cpp  Foo.h  main.cpp  pimpl.cpp  pimpl.h  renderer.cpp  renderer.h
