cmake_minimum_required(VERSION 3.20)
project(design_patterns C CXX)

set (CMAKE_CXX_STANDARD 20)
# add_executable(Creational_Builder Creational_Builder.cpp)
add_executable(Creational_Factory Creational/Creational_Factory.cpp)
# add_executable(Creational_Abstract Creational_Abstract.cpp)
add_executable(Creational_Prototype Creational/Creational_Prototype.cpp)
add_executable(Creational_Singleton Creational/Creational_Singleton.cpp)
#add_executable(Structural_Adaptor Structrual_Adaptor.cpp)
add_subdirectory(Structural/Bridge)
add_executable(Structrual_Decorator Structural/Structural_Decorator.cpp)
add_executable(Structural_Proxy Structural/Proxy/Structural_Proxy1.cpp)
